--- a/MarioMissilAttack/css/folhaDeEstilo.css
+++ b/MarioMissilAttack/css/folhaDeEstilo.css
@@ -63,6 +63,7 @@ body{
 #imgInicio{
     text-align: center;
     margin: 30px;
+    display: none;
 
 }#imgInicio img{cursor:pointer;}
 #telaDoJogo{
